# brick-jwst-2221

./: README.md  README.rst  allframe_cutout_demo.py  pyproject.toml  sbatch_commands.md  test_offset_psf_wrapper.py  tox.ini
.github/: copilot-instructions.md
analysis/: analysis_setup.py  co_fundamental_modeling.py  crowdsource_catalogs.py  crowdsource_catalogs_long.py  crowdsource_catalogs_short.py  isochrones.py  make_CCDsandCMDs.py  make_colorcolordiagram_fig4.py  make_observations_table.py  make_reftable.py  merge_catalogs.py  plot_tools.py  run_crowdsource.sh  selections.py  toast_brick.py
catalogs/: crowdsource_based_nircam-long_reference_astrometric_catalog.ecsv
docs/: catalog_pipeline_products.rst  conf.py  index.rst
licenses/: LICENSE.rst
notebooks/: BrA_Separation.ipynb  BrA_Separation_nrca.ipynb  BrA_Separation_nrcb.ipynb  BrickImages.ipynb  BuildReferenceCatalog.ipynb  CO2_PhoenixModel.ipynb  CO2_Phoenix_Example.ipynb  COFundamentalModeling.ipynb  COFundamentalModeling_and_IceModeling.ipynb  COemissionDustEmission.ipynb  CatalogCrossmatch.ipynb  CloudCMiri.ipynb  DataDownload_BrickJWST.ipynb  DownloadAlmaBrick.ipynb  DownloadAlmaCloudC.ipynb  EvaluateOffsetFrameProblem.ipynb  F212_separation_nrca.ipynb  F212_separation_nrcb.ipynb  F466_separation_nrca.ipynb  F466_separation_nrcb.ipynb  FilterFigure.ipynb  FixWCS.ipynb  GaiaAstrometry.ipynb  HydrogenLineRatiosBrAPaAPfB.ipynb  ISOSpectra.ipynb  IsochroneModeling.ipynb  JWSTPipelineCatalogCrossmatch.ipynb  MWE_Spitzer.ipynb  MedianFilterBackground.ipynb  ModuleACatalogCrossmatch.ipynb  PSFGridExperiments.ipynb  PaA_Separation_merged-reproject.ipynb  PaA_Separation_nrca.ipynb  PaA_Separation_nrcb.ipynb  PhotometryOnACutout.ipynb  PipelineAstrometryChecks.ipynb  PipelineDebuggingExperiments_F182M.ipynb  PipelineRerunF212test.ipynb  RecombFilterDifferencing.ipynb  Regzoom_PhotometryRecheck.ipynb  (+21 more)
offsets/: Offsets_JWST_Brick1182.csv  Offsets_JWST_Brick1182_F405ref.csv  Offsets_JWST_Brick1182_F405ref_average.csv  Offsets_JWST_Brick1182_VVV.csv  Offsets_JWST_Brick1182_VVV_average.csv  Offsets_JWST_Brick2221.csv  Offsets_JWST_Brick2221_F405ref.csv  measure_offsets.py  (+6 more)
(+349 files in other folders)
