[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "brick2221"
description = "analysis tools for jwst project 2221 and 1182 toward the brick"
requires-python = ">=3.9"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "adam ginsburg", email = "adam.g.ginsburg@gmail.com" },
]
dependencies = [
  "mpl_plot_templates",
  "pyspeckit",
  "grid_strategy",
  "stpsf"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]


[tool.setuptools_scm]
write_to = "brick2221/version.py"

[tool.pytest.ini_options]
testpaths = [
  "brick2221",
  "docs",
]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "brick2221/__init*",
 "brick2221/conftest.py",
 "brick2221/*setup_package*",
 "brick2221/tests/*",
 "brick2221/*/tests/*",
 "brick2221/extern/*",
 "brick2221/version*",
 "*/brick2221/__init*",
 "*/brick2221/conftest.py",
 "*/brick2221/*setup_package*",
 "*/brick2221/tests/*",
 "*/brick2221/*/tests/*",
 "*/brick2221/extern/*",
 "*/brick2221/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
